--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@headlessui/react": "1.7.19",
+    "@heroicons/react": "^2.1.5",
     "@next/bundle-analyzer": "14.2.3",
     "@tailwindcss/forms": "^0.5.7",
     "@tailwindcss/typography": "^0.5.12",
@@ -31,6 +32,7 @@
     "postcss": "^8.4.24",
     "react": "18.3.1",
     "react-dom": "18.3.1",
+    "react-tagcloud": "^2.3.3",
     "reading-time": "1.5.0",
     "rehype-autolink-headings": "^7.1.0",
     "rehype-citation": "^2.0.0",
