--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "gray-matter": "^4.0.2",
     "hast-util-from-html-isomorphic": "^2.0.0",
     "image-size": "1.0.0",
+    "leaflet": "^1.9.4",
     "next": "14.2.10",
     "next-contentlayer2": "0.5.1",
     "next-themes": "^0.3.0",
@@ -32,6 +33,7 @@
     "postcss": "^8.4.24",
     "react": "18.3.1",
     "react-dom": "18.3.1",
+    "react-leaflet": "^4.2.1",
     "react-tagcloud": "^2.3.3",
     "reading-time": "1.5.0",
     "rehype-autolink-headings": "^7.1.0",
